--- a/Ix.NET/Source/System.Linq.Async/System/Linq/Operators/MinMax.Generated.tt
+++ b/Ix.NET/Source/System.Linq.Async/System/Linq/Operators/MinMax.Generated.tt
@@ -284,8 +284,11 @@ foreach (var overload in new[] {
     new { selector = "Func<TSource, CancellationToken, ValueTask<" + t + ">>", invoke = "await _selector(e.Current, _cancellationToken).ConfigureAwait(false)" },
 })
 {
+    var isAsync = overload.invoke.StartsWith("await");
     var isDeepCancellation = overload.selector.Contains("CancellationToken");
-    var suffix = overload.invoke.StartsWith("await") ? "Await" : "";
+    var suffix = isAsync ? "Await" : "";
+    var visibility = isAsync ? "internal" : "public";
+    var core = isAsync ? "Core" : "";
 
     if (isDeepCancellation)
     {
@@ -295,7 +298,7 @@ foreach (var overload in new[] {
 <#
     }
 #>
-        public static ValueTask<<#=t#>> <#=m#><#=suffix#>Async<TSource>(this IAsyncEnumerable<TSource> source, <#=overload.selector#> selector, CancellationToken cancellationToken = default)
+        <#=visibility#> static ValueTask<<#=t#>> <#=m#><#=suffix#>Async<#=core#><TSource>(this IAsyncEnumerable<TSource> source, <#=overload.selector#> selector, CancellationToken cancellationToken = default)
         {
             if (source == null)
                 throw Error.ArgumentNull(nameof(source));
