--- a/Ix.NET/Source/System.Linq.Async/System/Linq/Operators/Average.Generated.tt
+++ b/Ix.NET/Source/System.Linq.Async/System/Linq/Operators/Average.Generated.tt
@@ -52,13 +52,13 @@ foreach (var o in os)
 
             return Core(source, cancellationToken);
 
-            static async ValueTask<<#=o.res#>> Core(IAsyncEnumerable<<#=o.type#>> _source, CancellationToken _cancellationToken)
+            static async ValueTask<<#=o.res#>> Core(IAsyncEnumerable<<#=o.type#>> source, CancellationToken cancellationToken)
             {
 <#
 if (isNullable)
 {
 #>
-                await using (var e = _source.GetConfiguredAsyncEnumerator(_cancellationToken, false))
+                await using (var e = source.GetConfiguredAsyncEnumerator(cancellationToken, false))
                 {
                     while (await e.MoveNextAsync())
                     {
@@ -91,7 +91,7 @@ if (isNullable)
 else
 {
 #>
-                await using (var e = _source.GetConfiguredAsyncEnumerator(_cancellationToken, false))
+                await using (var e = source.GetConfiguredAsyncEnumerator(cancellationToken, false))
                 {
                     if (!await e.MoveNextAsync())
                     {
@@ -126,17 +126,17 @@ else
 
             return Core(source, selector, cancellationToken);
 
-            static async ValueTask<<#=o.res#>> Core(IAsyncEnumerable<TSource> _source, Func<TSource, <#=o.type#>> _selector, CancellationToken _cancellationToken)
+            static async ValueTask<<#=o.res#>> Core(IAsyncEnumerable<TSource> source, Func<TSource, <#=o.type#>> selector, CancellationToken cancellationToken)
             {
 <#
 if (isNullable)
 {
 #>
-                await using (var e = _source.GetConfiguredAsyncEnumerator(_cancellationToken, false))
+                await using (var e = source.GetConfiguredAsyncEnumerator(cancellationToken, false))
                 {
                     while (await e.MoveNextAsync())
                     {
-                        var v = _selector(e.Current);
+                        var v = selector(e.Current);
                         if (v.HasValue)
                         {
                             <#=o.sum#> sum = v.GetValueOrDefault();
@@ -145,7 +145,7 @@ if (isNullable)
                             {
                                 while (await e.MoveNextAsync())
                                 {
-                                    v = _selector(e.Current);
+                                    v = selector(e.Current);
                                     if (v.HasValue)
                                     {
                                         sum += v.GetValueOrDefault();
@@ -165,20 +165,20 @@ if (isNullable)
 else
 {
 #>
-                await using (var e = _source.GetConfiguredAsyncEnumerator(_cancellationToken, false))
+                await using (var e = source.GetConfiguredAsyncEnumerator(cancellationToken, false))
                 {
                     if (!await e.MoveNextAsync())
                     {
                         throw Error.NoElements();
                     }
 
-                    <#=o.sum#> sum = _selector(e.Current);
+                    <#=o.sum#> sum = selector(e.Current);
                     long count = 1;
                     checked
                     {
                         while (await e.MoveNextAsync())
                         {
-                            sum += _selector(e.Current);
+                            sum += selector(e.Current);
                             ++count;
                         }
                     }
@@ -191,8 +191,7 @@ else
             }
         }
 
-        internal static ValueTask<<#=o.res#>> AverageAsyncCore<TSource>(this IAsyncEnumerable<TSource> source, Func<TSource, ValueTask<<#=o.type#>>> selector, CancellationToken cancellationToken = default)
-
+        internal static ValueTask<<#=o.res#>> AverageAwaitAsyncCore<TSource>(this IAsyncEnumerable<TSource> source, Func<TSource, ValueTask<<#=o.type#>>> selector, CancellationToken cancellationToken = default)
         {
             if (source == null)
                 throw Error.ArgumentNull(nameof(source));
@@ -201,17 +200,17 @@ else
 
             return Core(source, selector, cancellationToken);
 
-            static async ValueTask<<#=o.res#>> Core(IAsyncEnumerable<TSource> _source, Func<TSource, ValueTask<<#=o.type#>>> _selector, CancellationToken _cancellationToken)
+            static async ValueTask<<#=o.res#>> Core(IAsyncEnumerable<TSource> source, Func<TSource, ValueTask<<#=o.type#>>> selector, CancellationToken cancellationToken)
             {
 <#
 if (isNullable)
 {
 #>
-                await using (var e = _source.GetConfiguredAsyncEnumerator(_cancellationToken, false))
+                await using (var e = source.GetConfiguredAsyncEnumerator(cancellationToken, false))
                 {
                     while (await e.MoveNextAsync())
                     {
-                        var v = await _selector(e.Current).ConfigureAwait(false);
+                        var v = await selector(e.Current).ConfigureAwait(false);
                         if (v.HasValue)
                         {
                             <#=o.sum#> sum = v.GetValueOrDefault();
@@ -220,7 +219,7 @@ if (isNullable)
                             {
                                 while (await e.MoveNextAsync())
                                 {
-                                    v = await _selector(e.Current).ConfigureAwait(false);
+                                    v = await selector(e.Current).ConfigureAwait(false);
                                     if (v.HasValue)
                                     {
                                         sum += v.GetValueOrDefault();
@@ -240,20 +239,20 @@ if (isNullable)
 else
 {
 #>
-                await using (var e = _source.GetConfiguredAsyncEnumerator(_cancellationToken, false))
+                await using (var e = source.GetConfiguredAsyncEnumerator(cancellationToken, false))
                 {
                     if (!await e.MoveNextAsync())
                     {
                         throw Error.NoElements();
                     }
 
-                    <#=o.sum#> sum = await _selector(e.Current).ConfigureAwait(false);
+                    <#=o.sum#> sum = await selector(e.Current).ConfigureAwait(false);
                     long count = 1;
                     checked
                     {
                         while (await e.MoveNextAsync())
                         {
-                            sum += await _selector(e.Current).ConfigureAwait(false);
+                            sum += await selector(e.Current).ConfigureAwait(false);
                             ++count;
                         }
                     }
@@ -267,8 +266,7 @@ else
         }
 
 #if !NO_DEEP_CANCELLATION
-        internal static ValueTask<<#=o.res#>> AverageWithCancellationAsyncCore<TSource>(this IAsyncEnumerable<TSource> source, Func<TSource, CancellationToken, ValueTask<<#=o.type#>>> selector, CancellationToken cancellationToken = default)
-
+        internal static ValueTask<<#=o.res#>> AverageAwaitWithCancellationAsyncCore<TSource>(this IAsyncEnumerable<TSource> source, Func<TSource, CancellationToken, ValueTask<<#=o.type#>>> selector, CancellationToken cancellationToken = default)
         {
             if (source == null)
                 throw Error.ArgumentNull(nameof(source));
@@ -277,17 +275,17 @@ else
 
             return Core(source, selector, cancellationToken);
 
-            static async ValueTask<<#=o.res#>> Core(IAsyncEnumerable<TSource> _source, Func<TSource, CancellationToken, ValueTask<<#=o.type#>>> _selector, CancellationToken _cancellationToken)
+            static async ValueTask<<#=o.res#>> Core(IAsyncEnumerable<TSource> source, Func<TSource, CancellationToken, ValueTask<<#=o.type#>>> selector, CancellationToken cancellationToken)
             {
 <#
 if (isNullable)
 {
 #>
-                await using (var e = _source.GetConfiguredAsyncEnumerator(_cancellationToken, false))
+                await using (var e = source.GetConfiguredAsyncEnumerator(cancellationToken, false))
                 {
                     while (await e.MoveNextAsync())
                     {
-                        var v = await _selector(e.Current, _cancellationToken).ConfigureAwait(false);
+                        var v = await selector(e.Current, cancellationToken).ConfigureAwait(false);
                         if (v.HasValue)
                         {
                             <#=o.sum#> sum = v.GetValueOrDefault();
@@ -296,7 +294,7 @@ if (isNullable)
                             {
                                 while (await e.MoveNextAsync())
                                 {
-                                    v = await _selector(e.Current, _cancellationToken).ConfigureAwait(false);
+                                    v = await selector(e.Current, cancellationToken).ConfigureAwait(false);
                                     if (v.HasValue)
                                     {
                                         sum += v.GetValueOrDefault();
@@ -316,20 +314,20 @@ if (isNullable)
 else
 {
 #>
-                await using (var e = _source.GetConfiguredAsyncEnumerator(_cancellationToken, false))
+                await using (var e = source.GetConfiguredAsyncEnumerator(cancellationToken, false))
                 {
                     if (!await e.MoveNextAsync())
                     {
                         throw Error.NoElements();
                     }
 
-                    <#=o.sum#> sum = await _selector(e.Current, _cancellationToken).ConfigureAwait(false);
+                    <#=o.sum#> sum = await selector(e.Current, cancellationToken).ConfigureAwait(false);
                     long count = 1;
                     checked
                     {
                         while (await e.MoveNextAsync())
                         {
-                            sum += await _selector(e.Current, _cancellationToken).ConfigureAwait(false);
+                            sum += await selector(e.Current, cancellationToken).ConfigureAwait(false);
                             ++count;
                         }
                     }
