--- a/Ix.NET/Source/System.Linq.Async/System/Linq/Operators/Sum.Generated.tt
+++ b/Ix.NET/Source/System.Linq.Async/System/Linq/Operators/Sum.Generated.tt
@@ -42,11 +42,11 @@ foreach (var o in os)
 
             return Core(source, cancellationToken);
 
-            static async ValueTask<<#=o.type#>> Core(IAsyncEnumerable<<#=o.type#>> _source, CancellationToken _cancellationToken)
+            static async ValueTask<<#=o.type#>> Core(IAsyncEnumerable<<#=o.type#>> source, CancellationToken cancellationToken)
             {
                 var sum = <#=o.zero#>;
 
-                await foreach (<#=o.type#> value in _source.WithCancellation(_cancellationToken).ConfigureAwait(false))
+                await foreach (<#=o.type#> value in source.WithCancellation(cancellationToken).ConfigureAwait(false))
                 {
 <#
 if (o.@checked)
@@ -80,13 +80,13 @@ else
 
             return Core(source, selector, cancellationToken);
 
-            static async ValueTask<<#=o.type#>> Core(IAsyncEnumerable<TSource> _source, Func<TSource, <#=o.type#>> _selector, CancellationToken _cancellationToken)
+            static async ValueTask<<#=o.type#>> Core(IAsyncEnumerable<TSource> source, Func<TSource, <#=o.type#>> selector, CancellationToken cancellationToken)
             {
                 var sum = <#=o.zero#>;
 
-                await foreach (TSource item in _source.WithCancellation(_cancellationToken).ConfigureAwait(false))
+                await foreach (TSource item in source.WithCancellation(cancellationToken).ConfigureAwait(false))
                 {
-                    var value = _selector(item);
+                    var value = selector(item);
 
 <#
 if (o.@checked)
@@ -111,8 +111,7 @@ else
             }
         }
 
-        internal static ValueTask<<#=o.type#>> SumAsyncCore<TSource>(this IAsyncEnumerable<TSource> source, Func<TSource, ValueTask<<#=o.type#>>> selector, CancellationToken cancellationToken = default)
-
+        internal static ValueTask<<#=o.type#>> SumAwaitAsyncCore<TSource>(this IAsyncEnumerable<TSource> source, Func<TSource, ValueTask<<#=o.type#>>> selector, CancellationToken cancellationToken = default)
         {
             if (source == null)
                 throw Error.ArgumentNull(nameof(source));
@@ -121,13 +120,13 @@ else
 
             return Core(source, selector, cancellationToken);
 
-            static async ValueTask<<#=o.type#>> Core(IAsyncEnumerable<TSource> _source, Func<TSource, ValueTask<<#=o.type#>>> _selector, CancellationToken _cancellationToken)
+            static async ValueTask<<#=o.type#>> Core(IAsyncEnumerable<TSource> source, Func<TSource, ValueTask<<#=o.type#>>> selector, CancellationToken cancellationToken)
             {
                 var sum = <#=o.zero#>;
 
-                await foreach (TSource item in _source.WithCancellation(_cancellationToken).ConfigureAwait(false))
+                await foreach (TSource item in source.WithCancellation(cancellationToken).ConfigureAwait(false))
                 {
-                    var value = await _selector(item).ConfigureAwait(false);
+                    var value = await selector(item).ConfigureAwait(false);
 
 <#
 if (o.@checked)
@@ -153,8 +152,7 @@ else
         }
 
 #if !NO_DEEP_CANCELLATION
-        internal static ValueTask<<#=o.type#>> SumWithCancellationAsyncCore<TSource>(this IAsyncEnumerable<TSource> source, Func<TSource, CancellationToken, ValueTask<<#=o.type#>>> selector, CancellationToken cancellationToken = default)
-
+        internal static ValueTask<<#=o.type#>> SumAwaitWithCancellationAsyncCore<TSource>(this IAsyncEnumerable<TSource> source, Func<TSource, CancellationToken, ValueTask<<#=o.type#>>> selector, CancellationToken cancellationToken = default)
         {
             if (source == null)
                 throw Error.ArgumentNull(nameof(source));
@@ -163,13 +161,13 @@ else
 
             return Core(source, selector, cancellationToken);
 
-            static async ValueTask<<#=o.type#>> Core(IAsyncEnumerable<TSource> _source, Func<TSource, CancellationToken, ValueTask<<#=o.type#>>> _selector, CancellationToken _cancellationToken)
+            static async ValueTask<<#=o.type#>> Core(IAsyncEnumerable<TSource> source, Func<TSource, CancellationToken, ValueTask<<#=o.type#>>> selector, CancellationToken cancellationToken)
             {
                 var sum = <#=o.zero#>;
 
-                await foreach (TSource item in _source.WithCancellation(_cancellationToken).ConfigureAwait(false))
+                await foreach (TSource item in source.WithCancellation(cancellationToken).ConfigureAwait(false))
                 {
-                    var value = await _selector(item, _cancellationToken).ConfigureAwait(false);
+                    var value = await selector(item, cancellationToken).ConfigureAwait(false);
 
 <#
 if (o.@checked)
