Switch Async Rx to use proper IAsyncDisposable.

--- a/AsyncRx.NET/System.Reactive.Async.Linq/System/Reactive/Linq/Operators/FromEvent.Generated.tt
+++ b/AsyncRx.NET/System.Reactive.Async.Linq/System/Reactive/Linq/Operators/FromEvent.Generated.tt
@@ -90,7 +90,7 @@ for (var i = 2; i <= 16; i++)
                         {
                             removeHandler(converted);
 
-                            return Task.CompletedTask;
+                            return default;
                         }));
                     }),
                     scheduler
