--- a/AsyncRx.NET/System.Reactive.Async.Linq/System/Reactive/Linq/Operators/FromEvent.Generated.tt
+++ b/AsyncRx.NET/System.Reactive.Async.Linq/System/Reactive/Linq/Operators/FromEvent.Generated.tt
@@ -86,7 +86,7 @@ for (var i = 2; i <= 16; i++)
 
                         addHandler(converted);
 
-                        return Task.FromResult(AsyncDisposable.Create(() =>
+                        return new ValueTask<IAsyncDisposable>(AsyncDisposable.Create(() =>
                         {
                             removeHandler(converted);
 
