--- a/AsyncRx.NET/System.Reactive.Async.Linq/System/Reactive/Joins/AsyncPlan.Generated.tt
+++ b/AsyncRx.NET/System.Reactive.Async.Linq/System/Reactive/Joins/AsyncPlan.Generated.tt
@@ -31,20 +31,20 @@ for (var i = 1; i <= 16; i++)
             _selector = selector;
         }
 
-        protected override Task<TResult> EvalAsync(<#=evalPars#>) => Task.FromResult(_selector(<#=pars#>));
+        protected override ValueTask<TResult> EvalAsync(<#=evalPars#>) => new ValueTask<TResult>(_selector(<#=pars#>));
     }
 
     internal sealed class AsyncPlanWithTask<<#=genArgs#>, TResult> : AsyncPlanBase<<#=genArgs#>, TResult>
     {
-        private readonly Func<<#=genArgs#>, Task<TResult>> _selector;
+        private readonly Func<<#=genArgs#>, ValueTask<TResult>> _selector;
 
-        internal AsyncPlanWithTask(AsyncPattern<<#=genArgs#>> expression, Func<<#=genArgs#>, Task<TResult>> selector)
+        internal AsyncPlanWithTask(AsyncPattern<<#=genArgs#>> expression, Func<<#=genArgs#>, ValueTask<TResult>> selector)
             : base(expression)
         {
             _selector = selector;
         }
 
-        protected override Task<TResult> EvalAsync(<#=evalPars#>) => _selector(<#=pars#>);
+        protected override ValueTask<TResult> EvalAsync(<#=evalPars#>) => _selector(<#=pars#>);
     }
 
     internal abstract class AsyncPlanBase<<#=genArgs#>, TResult> : AsyncPlan<TResult>
@@ -56,9 +56,9 @@ for (var i = 1; i <= 16; i++)
             _expression = expression;
         }
 
-        protected abstract Task<TResult> EvalAsync(<#=evalPars#>); // REVIEW: Consider the use of ValueTask<TResult>.
+        protected abstract ValueTask<TResult> EvalAsync(<#=evalPars#>);
 
-        internal override ActiveAsyncPlan Activate(Dictionary<object, IAsyncJoinObserver> externalSubscriptions, IAsyncObserver<TResult> observer, Func<ActiveAsyncPlan, Task> deactivate)
+        internal override ActiveAsyncPlan Activate(Dictionary<object, IAsyncJoinObserver> externalSubscriptions, IAsyncObserver<TResult> observer, Func<ActiveAsyncPlan, ValueTask> deactivate)
         {
             var onError = new Func<Exception, ValueTask>(observer.OnErrorAsync);
 
