--- a/Rx.NET/Source/src/System.Reactive/Linq/Observable/Zip.NAry.tt
+++ b/Rx.NET/Source/src/System.Reactive/Linq/Observable/Zip.NAry.tt
@@ -8,8 +8,6 @@
 // The .NET Foundation licenses this file to you under the MIT License.
 // See the LICENSE file in the project root for more information. 
 
-#nullable disable
-
 using System.Reactive.Disposables;
 
 namespace System.Reactive.Linq.ObservableImpl
@@ -61,20 +59,29 @@ for (var j = 1; j <= i; j++)
         {
             private readonly Func<<#=ts#>, TResult> _resultSelector;
 
+<#
+for (var j = 1; j <= i; j++)
+{
+#>
+            private readonly ZipObserver<T<#=j#>> _observer<#=j#>;
+<#
+}
+#>
+
             public _(Func<<#=ts#>, TResult> resultSelector, IObserver<TResult> observer)
                 : base(<#=i#>, observer)
             {
                 _resultSelector = resultSelector;
-            }
 
 <#
 for (var j = 1; j <= i; j++)
 {
 #>
-            private ZipObserver<T<#=j#>> _observer<#=j#>;
+                _observer<#=j#> = new ZipObserver<T<#=j#>>(_gate, this, <#=j - 1#>);
 <#
 }
 #>
+            }
 
             public void Run(<#=os#>)
             {
@@ -84,9 +91,8 @@ for (var j = 1; j <= i; j++)
 for (var j = 1; j <= i; j++)
 {
 #>
-                _observer<#=j#> = new ZipObserver<T<#=j#>>(_gate, this, <#=j - 1#>);
                 disposables[<#=j - 1#>] = _observer<#=j#>;
-                base.Queues[<#= j - 1#>] = _observer<#=j#>.Values;
+                Queues[<#= j - 1#>] = _observer<#=j#>.Values;
 
 <#
 }
