--- a/Rx.NET/Source/src/System.Reactive/Linq/Observable.Multiple.CombineLatest.tt
+++ b/Rx.NET/Source/src/System.Reactive/Linq/Observable.Multiple.CombineLatest.tt
@@ -114,6 +114,16 @@ for (int j = 0; j < i; j++)
         /// <exception cref="ArgumentNullException"><#=paramRefs#> is null.</exception>
         public static IObservable<<#=tuple#>> CombineLatest<<#=genArgs#>>(this <#=parameters#>)
         {
+<#
+for (int j = 0; j < i; j++)
+{
+#>
+            if (<#=ordinals[j]#> == null)
+                throw new ArgumentNullException(nameof(<#=ordinals[j]#>));
+<#
+}
+#>
+
             return s_impl.CombineLatest(<#=sources#>);
         }
 
